syntax = "proto3";

package Elektronik.ProtobufPlugin.Common;
option csharp_namespace = "Elektronik.ProtobufPlugin.Common";

import "google/protobuf/empty.proto";
import "Common/MapTypes.proto";

message ErrorStatusPb {
	enum ErrorStatusEnum {
		UNKNOWN = 0;
		SUCCEEDED = 1;
		FAILED = 2;
	}
	ErrorStatusEnum err_type = 1;
	string message = 2;
}

service MapsManagerPb {
	rpc Handle(PacketPb) returns(ErrorStatusPb) {}
}

service ImageManagerPb {
	rpc Handle(ImagePacketPb) returns(ErrorStatusPb) {}
}

service SceneManagerPb {
	rpc Clear(google.protobuf.Empty) returns(ErrorStatusPb) {}
}